--- a/Bank.html
+++ b/Bank.html
@@ -14,15 +14,17 @@
       </section>
    </header>
    <main>
-      <section class="bg-green-400 w-9/12 mx-auto mt-12 p-8 rounded-md">
+      <section class="bg-green-400 gird justify-items-center w-9/12 mx-auto mt-12 p-8 rounded-md">
          <h2 class="text-3xl text-center mb-3">Login</h2>
-         <div class="place-items-center">
-            <input class="w-9/12 block px-3 mb-3 rounded" type="email" name="" id="user-email" placeholder="Your mail">
-            <input class="w-9/12 block px-3 mb-3 rounded" type="password" name="" id="user-password" placeholder="Password">
-            <button id="btn-submit" class="px-6 py-2 rounded-lg bg-amber-600 hover:bg-amber-700 text-white font-medium items-center">Login</button>
+         <div class="">
+           <div>
+            <input class="w-9/12 block px-3 py-2 mb-3 rounded" type="email" name="" id="user-email" placeholder="Your mail">
+            <input class="w-9/12 block px-3 mb-3 py-2 rounded" type="password" name="" id="user-password" placeholder="Password">
+            <button id="btn-submit" class="px-6 py-2 rounded-lg bg-amber-600 hover:bg-amber-700 text-white font-medium">Login</button>
+           </div>
          </div>
       </section>
    </main>
-   <script src="Bank.js"></script>
+   <script src="SorceCode/Bank.js"></script>
 </body>
 </html>
