--- a/SorceCode/BankInside.html
+++ b/SorceCode/BankInside.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="bg-green-500 p-8 mt-10 rounded-md">
-               <h1 class="text-3xl">Withdrow</h1>
+               <h1 class="text-3xl">Withdraw</h1>
                <h1 class="text-5xl">$<span id="Withdrow-Amounts">00</span></h1>
             </div>
 
@@ -43,9 +43,9 @@
             </div>
 
             <div class="bg-green-500 p-8 rounded-md">
-               <h1 class="text-5xl mb-6">Withdrow</h1>
+               <h1 class="text-5xl mb-6">Withdraw</h1>
                <input id="user-Withdrow-value" class="text-black mb-6 px-3 py-2 w-3/4 rounded" type="number" oncanplaythrough="this.value=''" name="" id="" placeholder="$ How much Amouts">
-               <button id="user-Withdrow" class="px-6 block py-2 rounded-lg bg-amber-600 hover:bg-amber-700 font-medium items-center">Withdrow</button>
+               <button id="user-Withdrow" class="px-6 block py-2 rounded-lg bg-amber-600 hover:bg-amber-700 font-medium items-center">Withdraw</button>
             </div>
 
          </div>
